# pakal

./: .pre-commit-config.yaml  README.md  pyproject.toml
pakal/: archive.py  fileio.py  stream.py
pakal/examples/: common.py  installer.py  lpak.py  pakfile.py  stk.py  xarc.py
